# Smart-Cosmetics-CRM-with-AI-Assistant

./: DanhGiaChatBot.md  README.md
RAG_LANGCHAIN_V4/: .dockerignore  .env.example  .gitignore  Dockerfile  HD_RAG.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
RAG_LANGCHAIN_V4/config/: logging_config.yaml  model_config.yaml
RAG_LANGCHAIN_V4/data/: Hasaki_Data_Final.xlsx
RAG_LANGCHAIN_V4/docs/: README.md  SETUP.md
RAG_LANGCHAIN_V4/scripts/: build_chatbot_eval_excel.py  build_embeddings.py  cleanup.py  evaluate_chatbot_ragas.py  run_tests.sh  setup_env.sh
RAG_LANGCHAIN_V4/src/api/: main.py
RAG_LANGCHAIN_V4/src/core/: base_llm.py  local_llm.py  model_factory.py  online_llm.py
RAG_LANGCHAIN_V4/src/history/: chat_history.py
RAG_LANGCHAIN_V4/src/inference/: inference_engine.py  query_rewriter.py  response_parser.py
RAG_LANGCHAIN_V4/src/processing/: chunking.py  preprocessor.py  product_schema.py
RAG_LANGCHAIN_V4/src/prompts/: chain.py  templates.py
RAG_LANGCHAIN_V4/src/rag/: embedding.py  indexer.py  query_analysis.py  reranker.py  retriever.py  vector_store.py
RAG_LANGCHAIN_V4/src/router/: product_terms.py  semantic_router.py
RAG_LANGCHAIN_V4/tests/: test_api.py  test_chat_flow.py  test_chunking.py  test_embedding.py  test_indexer.py  test_ollama_llm.py  test_reranker.py  test_retriever.py  test_retriever_regression.py  test_rewrite_query.py  test_router.py  test_router_regression.py
backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  HD_TichHop_PayOS.md  README.md  chucnang.md  package.json  (+2 more)
(+291 files in other folders)
