[project]
name = "rag-langchain-v4"
version = "0.1.0"
description = "Production-ready Vietnamese RAG chatbot with LangChain, FastAPI, MongoDB, Qdrant, and Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.111.0",
	"uvicorn[standard]>=0.30.0",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.3.0",
	"python-dotenv>=1.0.1",
	"pyyaml>=6.0.1",
	"langchain>=0.3.0",
	"langchain-core>=0.3.0",
	"langchain-text-splitters>=0.3.0",
	"langchain-ollama>=0.2.0",
	"langchain-google-genai>=1.0.7",
	"langchain-qdrant>=0.2.0",
	"langchain-huggingface>=0.1.0",
	"qdrant-client>=1.10.0",
	"sentence-transformers>=3.0.0",
	"sentencepiece>=0.2.0",
	"transformers>=4.44.0",
	"pyvi>=0.1.1",
	"numpy>=2.0,<2.4",
	"pymongo>=4.8.0",
	"pandas>=2.2.2",
	"matplotlib>=3.10.0",
	"pytest>=8.3.2",
	"httpx>=0.27.0",
	"openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
	"pytest>=8.3.2",
	"httpx>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
